# paddler

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  config.json  config.schema.json  en_US.txt  ipa_base.csv  modifiers.yml
src/: config.rs  dictionary.rs  engine.rs  error.rs  feature.rs  ipa.rs  lib.rs  main.rs  modifier.rs  pattern.rs  segment.rs  test.rs  utils.rs  word.rs
src/lang/: mod.rs  tr.rs
