[package]
name = "paddler"
authors = ["seckinu"]
description = "Match against word(s) with a simple and extensible syntax"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
