[package]
name = "paddler"
authors = ["seckinu"]
description = "Match against word(s) with a simple and extensible syntax"
version = "0.1.0"
edition = "2024"
license = "LGPL-3.0-or-later"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
itertools = "0.14.0"
phf = "0.14.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol_str = { version = "0.3.6", features = ["serde"] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"

[build-dependencies]
phf = { version = "0.14.0", default-features = false }
phf_codegen = "0.14.0"
strum_macros = "0.28.0"
